[package]
name = "tmc5072"
version = "0.3.1"
edition = "2024"
authors = ["Thomas POTIER <d34db4b3@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "A TCM5072 driver compatible with `embedded-hal`"
homepage = "https://github.com/d34db4b3/tmc5072-rs"
repository = "https://github.com/d34db4b3/tmc5072-rs"
readme = "README.md"
keywords = ["embedded-hal", "embedded", "trinamics", "tmc5072", "no-std"]
categories = ["embedded", "no-std", "science::robotics"]

[dependencies]
embedded-hal = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }
